refactor: make guard simple static and delete unnecessary specs